# chess-engine

./: .gitignore  .pdm.toml  README.md  constants.py  engine.py  greedy.py  play.py  pyproject.toml  requirements.txt  scores.py  state.py
